project/gen/cminusParser.py
# Generated from /home/everton/Documentos/compiladores/compilador/cminus.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class cminusParser ( Parser ):

    grammarFileName = "cminus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'else'", "'if'", "'int'", "'return'", 
                     "'void'", "'while'", "'<='", "'>='", "'='", "'=='", 
                     "'!='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'('", 
                     "')'", "';'", "','", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ELSE", "IF", "INT", "RETURN", "VOID", 
                      "WHILE", "LETHAN", "GETHAN", "ASSIGN", "EQ", "DF", 
                      "LT", "GT", "PLUS", "MINUS", "TIMES", "OVER", "LPAREN", 
                      "RPAREN", "SEMI", "COMMA", "LCBRACKET", "RCBRACKET", 
                      "LSBRACKET", "RSBRACKET", "ID", "NUM", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_programa = 0
    RULE_declaracao = 1
    RULE_var_declaracao = 2
    RULE_tipo_especificador = 3
    RULE_fun_declaracao = 4
    RULE_params = 5
    RULE_param_lista = 6
    RULE_param = 7
    RULE_composto_decl = 8
    RULE_local_declaracoes = 9
    RULE_statement_lista = 10
    RULE_statement = 11
    RULE_expressao_decl = 12
    RULE_selecao_decl = 13
    RULE_iteracao_decl = 14
    RULE_retorno_decl = 15
    RULE_expressao = 16
    RULE_var = 17
    RULE_simples_expressao = 18
    RULE_soma_expressao = 19
    RULE_termo = 20
    RULE_fator = 21
    RULE_ativacao = 22

    ruleNames =  [ "programa", "declaracao", "var_declaracao", "tipo_especificador", 
                   "fun_declaracao", "params", "param_lista", "param", "composto_decl", 
                   "local_declaracoes", "statement_lista", "statement", 
                   "expressao_decl", "selecao_decl", "iteracao_decl", "retorno_decl", 
                   "expressao", "var", "simples_expressao", "soma_expressao", 
                   "termo", "fator", "ativacao" ]

    EOF = Token.EOF
    ELSE=1
    IF=2
    INT=3
    RETURN=4
    VOID=5
    WHILE=6
    LETHAN=7
    GETHAN=8
    ASSIGN=9
    EQ=10
    DF=11
    LT=12
    GT=13
    PLUS=14
    MINUS=15
    TIMES=16
    OVER=17
    LPAREN=18
    RPAREN=19
    SEMI=20
    COMMA=21
    LCBRACKET=22
    RCBRACKET=23
    LSBRACKET=24
    RSBRACKET=25
    ID=26
    NUM=27
    BLOCK_COMMENT=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._declaracao = None # DeclaracaoContext
            self.decl = list() # of DeclaracaoContexts

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(cminusParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = cminusParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                localctx._declaracao = self.declaracao()
                localctx.decl.append(localctx._declaracao)
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==cminusParser.INT or _la==cminusParser.VOID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaracao(self):
            return self.getTypedRuleContext(cminusParser.Var_declaracaoContext,0)


        def fun_declaracao(self):
            return self.getTypedRuleContext(cminusParser.Fun_declaracaoContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = cminusParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        try:
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.var_declaracao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.fun_declaracao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declaracaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_especificador(self):
            return self.getTypedRuleContext(cminusParser.Tipo_especificadorContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def SEMI(self):
            return self.getToken(cminusParser.SEMI, 0)

        def LSBRACKET(self):
            return self.getToken(cminusParser.LSBRACKET, 0)

        def NUM(self):
            return self.getToken(cminusParser.NUM, 0)

        def RSBRACKET(self):
            return self.getToken(cminusParser.RSBRACKET, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_var_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaracao" ):
                listener.enterVar_declaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaracao" ):
                listener.exitVar_declaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaracao" ):
                return visitor.visitVar_declaracao(self)
            else:
                return visitor.visitChildren(self)




    def var_declaracao(self):

        localctx = cminusParser.Var_declaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declaracao)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.tipo_especificador()
                self.state = 56
                self.match(cminusParser.ID)
                self.state = 57
                self.match(cminusParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.tipo_especificador()
                self.state = 60
                self.match(cminusParser.ID)
                self.state = 61
                self.match(cminusParser.LSBRACKET)
                self.state = 62
                self.match(cminusParser.NUM)
                self.state = 63
                self.match(cminusParser.RSBRACKET)
                self.state = 64
                self.match(cminusParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tipo_especificadorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(cminusParser.INT, 0)

        def VOID(self):
            return self.getToken(cminusParser.VOID, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_tipo_especificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_especificador" ):
                listener.enterTipo_especificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_especificador" ):
                listener.exitTipo_especificador(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_especificador" ):
                return visitor.visitTipo_especificador(self)
            else:
                return visitor.visitChildren(self)




    def tipo_especificador(self):

        localctx = cminusParser.Tipo_especificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo_especificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not(_la==cminusParser.INT or _la==cminusParser.VOID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_declaracaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_especificador(self):
            return self.getTypedRuleContext(cminusParser.Tipo_especificadorContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def LPAREN(self):
            return self.getToken(cminusParser.LPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(cminusParser.ParamsContext,0)


        def RPAREN(self):
            return self.getToken(cminusParser.RPAREN, 0)

        def composto_decl(self):
            return self.getTypedRuleContext(cminusParser.Composto_declContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_fun_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun_declaracao" ):
                listener.enterFun_declaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun_declaracao" ):
                listener.exitFun_declaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_declaracao" ):
                return visitor.visitFun_declaracao(self)
            else:
                return visitor.visitChildren(self)




    def fun_declaracao(self):

        localctx = cminusParser.Fun_declaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fun_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.tipo_especificador()
            self.state = 71
            self.match(cminusParser.ID)
            self.state = 72
            self.match(cminusParser.LPAREN)
            self.state = 73
            self.params()
            self.state = 74
            self.match(cminusParser.RPAREN)
            self.state = 75
            self.composto_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_lista(self):
            return self.getTypedRuleContext(cminusParser.Param_listaContext,0)


        def VOID(self):
            return self.getToken(cminusParser.VOID, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = cminusParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.param_lista(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(cminusParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(cminusParser.ParamContext,0)


        def param_lista(self):
            return self.getTypedRuleContext(cminusParser.Param_listaContext,0)


        def COMMA(self):
            return self.getToken(cminusParser.COMMA, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_param_lista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_lista" ):
                listener.enterParam_lista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_lista" ):
                listener.exitParam_lista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_lista" ):
                return visitor.visitParam_lista(self)
            else:
                return visitor.visitChildren(self)



    def param_lista(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cminusParser.Param_listaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_param_lista, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.param()
            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = cminusParser.Param_listaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_param_lista)
                    self.state = 84
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 85
                    self.match(cminusParser.COMMA)
                    self.state = 86
                    self.param() 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_especificador(self):
            return self.getTypedRuleContext(cminusParser.Tipo_especificadorContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def LSBRACKET(self):
            return self.getToken(cminusParser.LSBRACKET, 0)

        def RSBRACKET(self):
            return self.getToken(cminusParser.RSBRACKET, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = cminusParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.tipo_especificador()
                self.state = 93
                self.match(cminusParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.tipo_especificador()
                self.state = 96
                self.match(cminusParser.ID)
                self.state = 97
                self.match(cminusParser.LSBRACKET)
                self.state = 98
                self.match(cminusParser.RSBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Composto_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._local_declaracoes = None # Local_declaracoesContext
            self.l_decl = list() # of Local_declaracoesContexts
            self._statement_lista = None # Statement_listaContext
            self.stm_list = list() # of Statement_listaContexts

        def LCBRACKET(self):
            return self.getToken(cminusParser.LCBRACKET, 0)

        def RCBRACKET(self):
            return self.getToken(cminusParser.RCBRACKET, 0)

        def local_declaracoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Local_declaracoesContext)
            else:
                return self.getTypedRuleContext(cminusParser.Local_declaracoesContext,i)


        def statement_lista(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Statement_listaContext)
            else:
                return self.getTypedRuleContext(cminusParser.Statement_listaContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_composto_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComposto_decl" ):
                listener.enterComposto_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComposto_decl" ):
                listener.exitComposto_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComposto_decl" ):
                return visitor.visitComposto_decl(self)
            else:
                return visitor.visitChildren(self)




    def composto_decl(self):

        localctx = cminusParser.Composto_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_composto_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cminusParser.LCBRACKET)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cminusParser.INT or _la==cminusParser.VOID:
                self.state = 103
                localctx._local_declaracoes = self.local_declaracoes()
                localctx.l_decl.append(localctx._local_declaracoes)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cminusParser.IF) | (1 << cminusParser.RETURN) | (1 << cminusParser.WHILE) | (1 << cminusParser.LPAREN) | (1 << cminusParser.SEMI) | (1 << cminusParser.LCBRACKET) | (1 << cminusParser.ID) | (1 << cminusParser.NUM))) != 0):
                self.state = 109
                localctx._statement_lista = self.statement_lista()
                localctx.stm_list.append(localctx._statement_lista)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(cminusParser.RCBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_declaracoesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._var_declaracao = None # Var_declaracaoContext
            self.var_decl = list() # of Var_declaracaoContexts

        def var_declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Var_declaracaoContext)
            else:
                return self.getTypedRuleContext(cminusParser.Var_declaracaoContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_local_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal_declaracoes" ):
                listener.enterLocal_declaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal_declaracoes" ):
                listener.exitLocal_declaracoes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_declaracoes" ):
                return visitor.visitLocal_declaracoes(self)
            else:
                return visitor.visitChildren(self)




    def local_declaracoes(self):

        localctx = cminusParser.Local_declaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_local_declaracoes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 117
                    localctx._var_declaracao = self.var_declaracao()
                    localctx.var_decl.append(localctx._var_declaracao)

                else:
                    raise NoViableAltException(self)
                self.state = 120 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_listaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.stms = list() # of StatementContexts

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.StatementContext)
            else:
                return self.getTypedRuleContext(cminusParser.StatementContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_statement_lista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_lista" ):
                listener.enterStatement_lista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_lista" ):
                listener.exitStatement_lista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_lista" ):
                return visitor.visitStatement_lista(self)
            else:
                return visitor.visitChildren(self)




    def statement_lista(self):

        localctx = cminusParser.Statement_listaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement_lista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 122
                    localctx._statement = self.statement()
                    localctx.stms.append(localctx._statement)

                else:
                    raise NoViableAltException(self)
                self.state = 125 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_decl(self):
            return self.getTypedRuleContext(cminusParser.Expressao_declContext,0)


        def composto_decl(self):
            return self.getTypedRuleContext(cminusParser.Composto_declContext,0)


        def selecao_decl(self):
            return self.getTypedRuleContext(cminusParser.Selecao_declContext,0)


        def iteracao_decl(self):
            return self.getTypedRuleContext(cminusParser.Iteracao_declContext,0)


        def retorno_decl(self):
            return self.getTypedRuleContext(cminusParser.Retorno_declContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = cminusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cminusParser.LPAREN, cminusParser.SEMI, cminusParser.ID, cminusParser.NUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.expressao_decl()
                pass
            elif token in [cminusParser.LCBRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.composto_decl()
                pass
            elif token in [cminusParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.selecao_decl()
                pass
            elif token in [cminusParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.iteracao_decl()
                pass
            elif token in [cminusParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.retorno_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expressao_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(cminusParser.SEMI, 0)

        def expressao(self):
            return self.getTypedRuleContext(cminusParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_expressao_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_decl" ):
                listener.enterExpressao_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_decl" ):
                listener.exitExpressao_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao_decl" ):
                return visitor.visitExpressao_decl(self)
            else:
                return visitor.visitChildren(self)




    def expressao_decl(self):

        localctx = cminusParser.Expressao_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cminusParser.LPAREN) | (1 << cminusParser.ID) | (1 << cminusParser.NUM))) != 0):
                self.state = 134
                self.expressao()


            self.state = 137
            self.match(cminusParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selecao_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condicao = None # ExpressaoContext
            self._statement = None # StatementContext
            self.corpoIF = list() # of StatementContexts
            self.corpoElse = list() # of StatementContexts

        def IF(self):
            return self.getToken(cminusParser.IF, 0)

        def LPAREN(self):
            return self.getToken(cminusParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cminusParser.RPAREN, 0)

        def expressao(self):
            return self.getTypedRuleContext(cminusParser.ExpressaoContext,0)


        def ELSE(self):
            return self.getToken(cminusParser.ELSE, 0)
